Salesforce/main/default/main/default/objects/Plano_de_Auditoria__c/Plano_de_Auditoria__c.object-meta.xml
<CustomObject>
    <label>Plano de Auditoria</label>
    <nameField>
        <displayFormat>PA-{0000}</displayFormat>
        <label>Nombre de Plano de Auditoria</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Planos de Auditoria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>