Salesforce/main/default/main/default/objects/Plano_de_Auditoria__c/fields/Cidade_Entrega__c.field-meta.xml
<CustomField>
    <fullName>Cidade_Entrega__c</fullName>
    <formula>IF(NOT(ISBLANK(Cuenta_Principal__r.ShippingCity)), IF(ISBLANK(Cuenta_Principal__r.ShippingState), Cuenta_Principal__r.ShippingCity, Cuenta_Principal__r.ShippingCity &amp; &quot;, &quot; &amp; Cuenta_Principal__r.ShippingState), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cidade Entrega</label>
    <type>Text</type>
</CustomField>