Salesforce/main/default/main/default/objects/Plano_de_Auditoria__c/fields/Cuenta_Principal__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_Principal__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cuenta Principal</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Plano de Auditoria</relationshipLabel>
    <relationshipName>Plano_de_Auditoria</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>