Salesforce/main/default/main/default/objects/Plano_de_Auditoria__c/fields/Safra__c.field-meta.xml
<CustomField>
    <fullName>Safra__c</fullName>
    <label>Safra</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Safra</valueSetName>
    </valueSet>
</CustomField>