Salesforce/main/default/main/default/objects/Plano_de_Auditoria__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Não Iniciado</fullName>
                <default>true</default>
                <label>Não Iniciado</label>
            </value>
            <value>
                <fullName>Em andamento</fullName>
            </value>
            <value>
                <fullName>Concluido</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Auditado</fullName>
                <isActive>false</isActive>
                <label>Auditado</label>
            </value>
            <value>
                <fullName>Pendente</fullName>
                <isActive>false</isActive>
                <label>Pendente</label>
            </value>
            <value>
                <fullName>Rejeitado</fullName>
                <isActive>false</isActive>
                <label>Rejeitado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>